# bubble_rise

./: .gitignore  CMakeLists.txt  debug.txt  dict.txt  fields2.000000  fieldsSave1.000000  grid.txt  gridSave1.000000  main.cpp  mesh.txt  model.pt  nn_main.cpp  nn_main.h  params.txt  phaseField.txt  plot.py  thermo.txt  utils.h
